--- a/app/views/pages/search.html.erb
+++ b/app/views/pages/search.html.erb
@@ -33,6 +33,7 @@
             <!-- Ajoutez d'autres informations pertinentes pour Walk ici -->
           <% end %>
         </div>
+        <%= link_to "Rejoins le Groupe 🐶", group_join_path(@group), class: "button-form btn btn-link", style: "text-decoration:none;" %>
       </div>
     <% end %>
   </div>
