--- a/app/views/groups/group_user.html.erb
+++ b/app/views/groups/group_user.html.erb
@@ -1,11 +1,11 @@
-<h1>Tu es sur la view des membres d'un groupe</h1>
+<h1 class="container">Membres du groupe</h1>
 
 <div class="card-product">
 
   <img src="https://raw.githubusercontent.com/lewagon/fullstack-images/master/uikit/skateboard.jpg"/>
 
       <% @group.profiles.each do | profile |%>
-      
+
   <div class="card-product-infos">
     <h2><%= profile.username%></h2>
     <% @dogs.each do |dog|%>
