les pages ont des titres maintenant lol

--- a/app/views/groups/group_user.html.erb
+++ b/app/views/groups/group_user.html.erb
@@ -1,4 +1,5 @@
-<h1 class="container">Membres du groupe</h1>
+<div class="container mt-3">
+<h1 class="mb-3">Membres de <%= @group.name %></h1>
 
 <div class="card-product">
 
@@ -15,4 +16,5 @@
   </div>
   <% end %>
   <% end %>
+</div>
 </div>
