--- a/app/views/walks/index.html.erb
+++ b/app/views/walks/index.html.erb
@@ -1,3 +1,5 @@
+<div class="container">
+<h1 class="pt-3">Liste des sorties à venir</h1>
 <h1 style="margin-left: 150px; margin-top: 15px;"><%= @group_name %></h1>
 
 <div class="contain">
@@ -19,4 +21,5 @@
   </div>
       <% end %>
     <% end %>
+</div>
 </div>
