--- a/app/views/groups/show.html.erb
+++ b/app/views/groups/show.html.erb
@@ -1,5 +1,7 @@
+<p class="container">Bienvenue sur la page d'accueil de <%= @group.name %></p>
 <h1 style="margin-left: 150px; margin-top: 15px;"><%= @group_name %></h1>
 
+<div class="container">
 <div class="button-group">
   <div class="button-group-category-showgr">
     <%= link_to group_walks_path(@group), class: 'card-link-grp' do %>
@@ -30,3 +32,4 @@
     <%= link_to "Quitter le groupe 🐶", profile_group_quit_path(@group), data: {turbo_method: :delete}, class: "button-form btn btn-link", style: "text-decoration:none;" %>
   </div>
     <% end %>
+</div>
