les boutons de retour sont ok

--- a/app/views/groups/index.html.erb
+++ b/app/views/groups/index.html.erb
@@ -22,4 +22,6 @@
   <% else %>
     <p>Vous n'appartenez à aucun groupe pour le moment.</p>
   <% end %>
+<%= link_to "Revenir vers la Homepage", root_path %>
+
 </div>
