--- a/app/views/groups/show.html.erb
+++ b/app/views/groups/show.html.erb
@@ -32,4 +32,6 @@
     <%= link_to "Quitter le groupe 🐶", profile_group_quit_path(@group), data: {turbo_method: :delete}, class: "button-form btn btn-link", style: "text-decoration:none;" %>
   </div>
     <% end %>
+
+    <%= link_to "Revenir en arrière", :back %>
 </div>
