--- a/app/views/walks/index.html.erb
+++ b/app/views/walks/index.html.erb
@@ -10,13 +10,18 @@
           <p><%= walk.start_time %></p>
           <p><%= walk.adress %></p>
 
+          <% if !current_user.profile.profile_walks.include?(ProfileWalk.find_by(walk_id: walk.id)) %>
         <div class="btn-div">
-          <% if !current_user.profile.walks.include?(walk) %>
-          <%= link_to "Rejoins la sortie 🐶", walk_join_path(walk), data: {turbo_method: :post}, class: "button-form btn btn-link", style: "text-decoration:none;" %>
-          <% end %>
+          <%= link_to "Rejoins la sortie 🐶", walk_join_path(walk, group_id: @group.id), data: {turbo_method: :post}, class: "button-form btn btn-link", style: "text-decoration:none;" %>
         </div>
+          <% end %>
+          <% if current_user.profile.profile_walks.include?(ProfileWalk.find_by(walk_id: walk.id)) %>
+        <div class="btn-div">
+            <%= link_to "Quitter la sortie 🐶", profile_walk_quit_path(walk, group_id: @group.id), data: {turbo_method: :delete}, class: "button-form btn btn-link", style: "text-decoration:none;" %>
+        </div>
+            <% end %>
         </div>
   </div>
       <% end %>
-    <% end %>
+  <% end %>
 </div>
