--- a/app/views/groups/index.html.erb
+++ b/app/views/groups/index.html.erb
@@ -10,7 +10,7 @@
       <% @groups.each do |group| %>
         <%= link_to profile_group_path(@profile, group), class: "card-link" do %>
           <div class="card-product">
-            <%= cl_image_tag("qlqwg0ygtzhztwy8kdzb", alt: group.name) %>
+            <%= cl_image_tag("qhttps://res.cloudinary.com/drp9liavk/image/upload/v1719307134/qlqwg0ygtzhztwy8kdzb.png", alt: group.name) %>
             <div class="card-product-infos">
               <h2><%= group.name %></h2>
               <p><%= group.description %></p>
