--- a/app/views/shared/_header.html.erb
+++ b/app/views/shared/_header.html.erb
@@ -3,7 +3,7 @@
   <div class="header fixed-top">
     <% if user_signed_in? %>
     <div class="dropdown" data-controller="dropdown">
-      <%= cl_image_tag("https://res.cloudinary.com/drp9liavk/image/upload/v1719308669/avatar2_byf4no.png", class: "avatar-bordered dropdown-toggle", alt: "avatar-bordered", id: "dropdownMenuButton", data: { bs_toggle: "dropdown", action: "click->dropdown#drop" }, 'aria-expanded': "false") %>
+      <%= cl_image_tag("https://res.cloudinary.com/drp9liavk/image/upload/v1719307058/f29lvk0w8dbf5ykju9is.jpg", class: "avatar-bordered dropdown-toggle", alt: "avatar-bordered", id: "dropdownMenuButton", data: { bs_toggle: "dropdown", action: "click->dropdown#drop" }, 'aria-expanded': "false") %>
            <ul class="dropdown-menu d-none" aria-labelledby="dropdownMenuButton" data-dropdown-target="down">
         <li><%= link_to 'Mon compte', edit_user_registration_path, class: 'dropdown-item' %></li>
         <% if current_user.profile.present? %>
@@ -16,7 +16,7 @@
       </ul>
     </div>
     <% else %>
-      <%= cl_image_tag("avatar2_byf4no", class: "avatar-bordered", alt: "avatar-bordered") %>
+      <%= cl_image_tag("https://res.cloudinary.com/drp9liavk/image/upload/v1719308669/avatar2_byf4no.png", class: "avatar-bordered", alt: "avatar-bordered") %>
     <% end %>
   </div>
 </div>
