--- a/app/views/profiles/new.html.erb
+++ b/app/views/profiles/new.html.erb
@@ -43,5 +43,8 @@ Vous voulez revenir en arrière?
 <div class="edit-btn">
 <%= link_to "Editer le compte", edit_user_registration_path(@user) %>
 </div>
+<div class="edit-btn d-flex justify-content-end">
+<%= link_to "Homepage", root_path %>
+</div>
 </div>
 </div>
