--- a/app/assets/stylesheets/components/_group_card.scss
+++ b/app/assets/stylesheets/components/_group_card.scss
@@ -11,12 +11,11 @@
   flex-direction: row-reverse;
 }
 
-
 .card-product {
   overflow: hidden;
   height: 240px;
   background: white;
-  box-shadow: 0 0 15px rgba(0,0,0,0.2);
+  box-shadow: 0 0 15px rgba(0, 0, 0, 0.2);
   display: flex;
   align-items: center;
   margin-bottom: 20px;
@@ -52,7 +51,7 @@
 .card-product p {
   font-size: 12px;
   line-height: 1.4;
-  opacity: .7;
+  opacity: 0.7;
   margin-bottom: 0;
   margin-top: 8px;
 
@@ -74,4 +73,15 @@
   display: block;
   text-decoration: none;
   color: inherit;
+}
+
+.groups-card {
+  position: relative;
+  display: flex;
+  flex-direction: column;
+  border: 1px solid #8b8989;
+}
+
+#margin-homepage {
+  margin-right: 10px;
 }
