--- a/app/views/groups/new.html.erb
+++ b/app/views/groups/new.html.erb
@@ -38,4 +38,7 @@
       <%= link_to "Retour", profile_groups_path(@profile), class: "btn btn-secondary" %>
     </div>
   </div>
+  <div class="edit-btn d-flex justify-content-end">
+<%= link_to "Homepage", root_path %>
+</div>
 </div>
