--- a/app/views/groups/new.html.erb
+++ b/app/views/groups/new.html.erb
@@ -28,6 +28,8 @@
                   required: true,
                   label_html: { class: 'form-label-custom' },
                   input_html: { class: 'custom-class' } %>
+
+          <%= f.input :photo, as: :file %>
     </div>
 
     <div class="form-actions">
