--- a/app/views/profiles/edit.html.erb
+++ b/app/views/profiles/edit.html.erb
@@ -38,6 +38,7 @@
                 label: "Mot de passe",
                 label_html: { class: 'form-label-custom' },
                 input_html: { class: 'custom-class' } %>
+          <%= f.input :photo, as: :file %>
   </div>
 
   <div class="form-actions">
