--- a/app/views/shared/_header.html.erb
+++ b/app/views/shared/_header.html.erb
@@ -6,7 +6,7 @@
         <% if @profile.photo.present? %>
           <%= cl_image_tag(@profile.photo.key, class: "avatar-bordered dropdown-toggle", alt: "avatar-bordered", id: "dropdownMenuButton", data: { bs_toggle: "dropdown", action: "click->dropdown#drop" }, 'aria-expanded': "false") %>
         <% else %>
-          <%= cl_image_tag("https://res.cloudinary.com/drp9liavk/image/upload/v1719308669/avatar2_byf4no.png", class: "avatar-bordered dropdown-toggle", alt: "avatar-bordered", id: "dropdownMenuButton", data: { bs_toggle: "dropdown", action: "click->dropdown#drop" }, 'aria-expanded': "false") %>
+          <%= image_tag("https://res.cloudinary.com/drp9liavk/image/upload/v1719308669/avatar2_byf4no.png", class: "avatar-bordered dropdown-toggle", alt: "avatar-bordered", id: "dropdownMenuButton", data: { bs_toggle: "dropdown", action: "click->dropdown#drop" }, 'aria-expanded': "false") %>
         <% end %>
         <ul class="dropdown-menu d-none" aria-labelledby="dropdownMenuButton" data-dropdown-target="down">
           <li><%= link_to 'Mon compte', edit_user_registration_path, class: 'dropdown-item' %></li>
