--- a/app/views/walks/index.html.erb
+++ b/app/views/walks/index.html.erb
@@ -6,7 +6,7 @@
    <% if @walks.any? %>
       <% @walks.each do |walk|%>
   <div class="card-product">
-    <img src="https://raw.githubusercontent.com/lewagon/fullstack-images/master/uikit/skateboard.jpg" />
+    <img src="https://res.cloudinary.com/drp9liavk/image/upload/v1719492741/development/mpdavi6h3egnxsn7ud7mhb995oj3.jpg" />
         <div class="card-product-infos">
           <h2><%= walk.date %></h2>
           <p><%= walk.start_time %></p>
