--- a/app/views/pages/home.html.erb
+++ b/app/views/pages/home.html.erb
@@ -12,7 +12,7 @@
       <% end %>
     </div>
   <% else %>
-     <%= cl_image_tag("https://res.cloudinary.com/drp9liavk/image/upload/v1719307117/gswwrspw7pzprdl3iqii.png", class: "logo-homepage") %>
+     <%= image_tag("https://res.cloudinary.com/drp9liavk/image/upload/v1719307117/gswwrspw7pzprdl3iqii.png", class: "logo-homepage") %>
     <div class="welcome-section text-center">
       <h1 class="display-4 mb-4">Bienvenue sur DoggyWalky</h1>
       <p class="lead mb-4">Rejoignez notre communauté pour des promenades inoubliables avec votre toutou préféré.</p>
