--- a/app/views/shared/_header.html.erb
+++ b/app/views/shared/_header.html.erb
@@ -19,7 +19,7 @@
         </ul>
       </div>
     <% else %>
-      <%= cl_image_tag("https://res.cloudinary.com/drp9liavk/image/upload/v1719308669/avatar2_byf4no.png", class: "avatar-bordered", alt: "avatar-bordered") %>
+      <%= image_tag("https://res.cloudinary.com/drp9liavk/image/upload/v1719308669/avatar2_byf4no.png", class: "avatar-bordered", alt: "avatar-bordered") %>
     <% end %>
   </div>
 </div>
