--- a/app/views/shared/_header.html.erb
+++ b/app/views/shared/_header.html.erb
@@ -15,7 +15,7 @@
           <% else %>
             <li><%= link_to 'Créer un profil', new_profile_path, class: 'dropdown-item' %></li>
           <% end %>
-          <li><%= link_to "Log Out", destroy_user_session_path, method: :delete, class: "dropdown-item logout-link" %></li>
+          <li><%= link_to "Se deconnecter", destroy_user_session_path, method: :delete, class: "dropdown-item logout-link" %></li>
         </ul>
       </div>
     <% else %>
