re modifs lmots

--- a/app/views/groups/show.html.erb
+++ b/app/views/groups/show.html.erb
@@ -11,13 +11,13 @@
 
   <div class="button-group-category-showgr">
     <%= link_to new_group_walk_path(@group), class: 'card-link-grp' do %>
-      <div class="card-content">Crée ta Sortie</div>
+      <div class="card-content">Créer une Sortie</div>
     <% end %>
   </div>
 
   <div class="button-group-category-showgr">
     <%= link_to group_group_user_path(@group), class: 'card-link-grp' do %>
-      <div class="card-content">La liste des Membres</div>
+      <div class="card-content">Liste des mebres</div>
     <% end %>
   </div>
 </div>
