--- a/app/views/groups/show.html.erb
+++ b/app/views/groups/show.html.erb
@@ -17,7 +17,7 @@
 
   <div class="button-group-category-showgr">
     <%= link_to group_group_user_path(@group), class: 'card-link-grp' do %>
-      <div class="card-content">Liste des mebres</div>
+      <div class="card-content">Liste des membres</div>
     <% end %>
   </div>
 </div>
