--- a/app/views/groups/index.html.erb
+++ b/app/views/groups/index.html.erb
@@ -26,5 +26,8 @@
   <% else %>
     <p>Vous n'appartenez à aucun groupe pour le moment.</p>
   <% end %>
-  <%= link_to "Revenir a l'accueil", root_path %>
+
+  <div class="btn-div">
+    <%= link_to "Revenir a l'accueil", root_path, class: "button-form btn btn-link", style: "text-decoration:none;" %>
+  </div>
 </div>
