--- a/app/views/groups/show.html.erb
+++ b/app/views/groups/show.html.erb
@@ -1,4 +1,4 @@
-<p class="container"><%= @group.name %></p>
+<p class="container">Bienvenue sur le groupe <%= @group.name %></p>
 <h1 style="margin-left: 150px; margin-top: 15px;"><%= @group_name %></h1>
 
 <div class="container">
