--- a/app/assets/stylesheets/pages/_home.scss
+++ b/app/assets/stylesheets/pages/_home.scss
@@ -1,11 +1,10 @@
 /* app/assets/stylesheets/application.scss */
 
 /* Styles pour la page d'accueil */
-#home-page {
+#homme-page {
   position: relative;
   width: 100%;
   height: 100%;
-  padding-top: 20px; /* Ajout de padding en haut pour espacer l'image du haut de la page */
 }
 
 .welcome-section {
