--- a/app/views/groups/index.html.erb
+++ b/app/views/groups/index.html.erb
@@ -1,6 +1,6 @@
 <!-- app/views/groups/show.html.erb -->
 <div class="container">
-  <h1>Liste de vos groupes</h1>
+  <h1 class="text-center mt-5">Liste de vos groupes</h1>
   <div class="btn-div">
     <%= link_to "Créer un groupe 🐶", new_profile_group_path(@profile), class: "button-form btn btn-link", style: "text-decoration:none;" %>
   </div>
