--- a/app/views/groups/show.html.erb
+++ b/app/views/groups/show.html.erb
@@ -37,7 +37,7 @@
   data-controller="chatroom-subscription"
   data-chatroom-subscription-chatroom-id-value="<%= @chatroom.id %>">
 
-  <h1>Chat</h1>
+  <h1>Messagerie</h1>
 
   <div class="messages" data-chatroom-subscription-target="messages">
     <% @chatroom.messages.each do |message| %>
