toutes les petites choses de la vie

--- a/app/views/groups/index.html.erb
+++ b/app/views/groups/index.html.erb
@@ -26,5 +26,5 @@
   <% else %>
     <p>Vous n'appartenez à aucun groupe pour le moment.</p>
   <% end %>
-  <%= link_to "Revenir a l'accueil", root_path %>
+  <%= link_to "Revenir a l'accueil", root_path, class: "text-decoration-none" %>
 </div>
