--- a/app/views/groups/new.html.erb
+++ b/app/views/groups/new.html.erb
@@ -1,7 +1,7 @@
 
 <!-- app/views/groups/new.html.erb -->
 <div class="container">
-  <h1 class="pt-3 pb-2">Créez un groupe 🐶</h1>
+  <h1 class="mt-5 mb-5 text-center">Créez un groupe 🐶</h1>
 
   <%= simple_form_for([@profile, @group]) do |f| %>
     <%= f.error_notification %>
