--- a/app/views/pages/search.html.erb
+++ b/app/views/pages/search.html.erb
@@ -1,5 +1,5 @@
 <div class="container">
-  <h2 class="mt-5">Recherche</h2>
+  <h1 class="mt-5 mb-5 text-center">Recherche</h1>
 
   <%= form_with url: search_path, method: :get, class: "d-flex flex-column" do |f| %>
     <div class="form-group">
