--- a/app/views/shared/_header.html.erb
+++ b/app/views/shared/_header.html.erb
@@ -21,5 +21,6 @@
     <% else %>
       <%= image_tag("https://res.cloudinary.com/drp9liavk/image/upload/v1719308669/avatar2_byf4no.png", class: "avatar-bordered", alt: "avatar-bordered") %>
     <% end %>
+    <h2 class="titre-principal mx-auto">DoggyWalky</h2>
   </div>
 </div>
