--- a/app/assets/stylesheets/components/_chatroom.scss
+++ b/app/assets/stylesheets/components/_chatroom.scss
@@ -20,7 +20,7 @@
   }
 
   #new_message {
-    border-top: 1px solid $gray-200;
+    border-top: 1x solid $gray-200;
     padding: 1rem;
 
     .form-group {
