--- a/app/assets/stylesheets/components/_header.scss
+++ b/app/assets/stylesheets/components/_header.scss
@@ -1,4 +1,3 @@
-
 .main-content {
   padding-top: 50px;
 }
@@ -16,7 +15,7 @@
   top: O;
   width: 100%;
   z-index: 1030;
-  box-shadow: 0 -2px 5px rgba(0,0,0,0.1);
+  box-shadow: 0 -2px 5px rgba(0, 0, 0, 0.1);
 }
 
 .header .avatar {
@@ -44,3 +43,6 @@
   cursor: pointer;
 }
 
+.titre-principal {
+  color: #eeeeee;
+}
