--- a/app/views/groups/group_user.html.erb
+++ b/app/views/groups/group_user.html.erb
@@ -1,5 +1,5 @@
 <div class="container mt-3">
-<h1 class="mb-3">Membres de <%= @group.name %></h1>
+<h1 class="mt-5 mb-5 text-center">Membres de <%= @group.name %></h1>
 
 
 
