--- a/app/views/profiles/edit.html.erb
+++ b/app/views/profiles/edit.html.erb
@@ -1,5 +1,5 @@
 <div class="container">
-<h2 class="mt-5">Editer un profil</h2>
+<h2 class="mt-5 text-center">Editer un profil</h2>
 
 <%= simple_form_for(@profile) do |f| %>
   <%= f.error_notification %>
@@ -53,7 +53,7 @@ Vous voulez mettre le compte à jour?
 <div class="edit-btn">
 <%= link_to "Editer le compte", edit_user_registration_path(@user) %>
 </div>
-<%= link_to "Supprimer le profil", profile_path(@profile), data: {turbo_method: :delete, turbo_confirm: "Are you sure?"}, class: "pt-3" %>
+<%= link_to "Supprimer le profil", profile_path(@profile), data: {turbo_method: :delete, turbo_confirm: "Are you sure?"} %>
 </div>
 <div class="edit-btn d-flex justify-content-end">
 <%= link_to "Homepage", root_path %>
