--- a/app/views/walks/new.html.erb
+++ b/app/views/walks/new.html.erb
@@ -1,5 +1,5 @@
 <div class="container">
-<h2 class="mt-5">Crée ta Sortie</h2>
+<h1 class="mt-5 mb-5 text-center">Crée ta Sortie</h1>
 
 <%= simple_form_for [@group, @walk] do |f| %>
   <%= f.error_notification %>
@@ -29,5 +29,8 @@
     <%= f.button :submit, "Valider 🐶", class: "button-form" %>
   </div>
 <% end %>
+<div class="mt-3 edit-btn">
+<%= link_to "Revenir en arrière", :back %>
+</div>
 
 </div>
